--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <h4 class="bg-primary text-white text-center p-2 m-1">
       Static HTML Element
     </h4>
+    <div class="text-center m-2">
+      <div>This is a span element</div>
+      <div>This is another span element</div>
+    </div>
     <div id="domParent"></div>
     <div id="root"></div>
   </body>
